mas como tu és burro paulo

--- a/aula-challenge-33/aula-33-blank.html
+++ b/aula-challenge-33/aula-33-blank.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Aula 31 - innerHTML, insertAdjacentHTML, Date, Math</title>
+    <title>Aula 33 - </title>
 </head>
 <style>
     
@@ -30,7 +30,7 @@
 /*    
             * * * * * * * * * * * * * * * * * * * * * *
             *                                         *
-            *    ÍNDICE DA AULA 31                    *
+            *    ÍNDICE DA AULA 33                    *
             *                                         *
             *    1. innerHTML                         *
             *                                         *
